welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:15: error: not found: type YELLOW
def faireV(c:YELLOW){
             ^MethodsPicture:5: error: not found: type YELLOW
	{faireV(c:YELLOW);
                  ^MethodsPicture:6: error: not found: type RED
	faireV(c:RED);
                 ^MethodsPicture:7: error: not found: type BLUE
	faireV(c:BLUE);
                 ^MethodsPicture:8: error: not found: type GREEN
	faireV(c:GREEN);	
                 ^MethodsPicture:17: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
setCouleurBrosse();
                ^