welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	for (tout <- 1 to 3){
	for (ligne <-1 to 3){
	{faireV(c:YELLOW);
	faireV(c:RED);
	faireV(c:BLUE);
	faireV(c:GREEN);	
	}

	}

	}
}
def faireV(c:YELLOW){
	avance();
setCouleurBrosse();
baisseBrosse();
gauche();
leveBrosse();
avance();
droite();
avance();
baisseBrosse();
droite();
leveBrosse();
avance();
gauche();
avance();
baisseBrosse();
leveBrosse();
avance();
gauche();
}